# voom2

./: .gitignore  Makefile.in  README.md  aclocal.m4  config.status  configure  configure.in
doc/: Makefile.in
doc/html/: _bar_shape_8h.html  _bar_shape_8h_source.html  _base_node_8h.html  _base_node_8h_source.html  _cahn_hilliard_8h_source.html  _comp_neo_hookean_8h.html  _comp_neo_hookean_8h_source.html  _diffusion_material_8h_source.html  _e_p_crank_nicholson_8h_source.html  _e_p_model_8h.html  _e_p_model_8h_source.html  _e_p_result_8h_source.html  _e_p_solver_8h_source.html  _eigen_elliptic_result_8h_source.html  _eigen_n_rsolver_8h.html  _eigen_n_rsolver_8h_source.html  _elliptic_model_8h_source.html  _elliptic_result_8h_source.html  _epetra_e_p_result_8h_source.html  _epetra_elliptic_result_8h_source.html  _epetra_n_rsolver_8h.html  _epetra_n_rsolver_8h_source.html  _epetra_serial_elliptic_result_8h_source.html  _epetra_sparse_solver_8h_source.html  _f_e_mesh_8h_source.html  _f_egeom_element1_d_8h.html  _f_egeom_element1_d_8h_source.html  _f_egeom_element_8h.html  _f_egeom_element_8h_source.html  _field_node_8h.html  _field_node_8h_source.html  _fourth_order_tensor_8h_source.html  _gauge_lipid_8h_source.html  _gauge_model_8h_source.html  _geom_element_8h.html  _geom_element_8h_source.html  _half_edge_mesh_8h_source.html  _hex_quadrature_8h_source.html  _hex_shape_8h.html  _hex_shape_8h_source.html  (+325 more)
doc/latex/: _bar_shape_8h.tex  _base_node_8h.tex  _comp_neo_hookean_8h.tex  _e_p_model_8h.tex  _mesh_8h.tex  (+128 more)
src/: Makefile.am  Makefile.in  config.h  voom.h
src/Applications/Loop_Memb_Particle/: Loop_Memb_Particle  Loop_Memb_Particle.cc  Makefile.am  Makefile.in  N200_kappa2_lambda30  dict_212.txt  dict_2562.txt  dict_642.txt  divide_surface.py  fort.8  particle_visualization.py  sphere_642.vtk_bkup
src/Applications/Loop_Memb_Particle/LJFineN12_todel/: readme
src/Applications/Loop_Memb_Particle/LJN12/: N12_kappa3_lambda3  N12_kappa3_lambda6
src/Applications/Loop_Memb_Particle/LJN12/N12_LJ_final/: N12_kappa3_lambda6  readme.txt
src/Applications/Loop_Memb_Particle/N200LJ/: N200_kappa3_lambda6
src/Applications/Loop_Memb_Particle/N3_LJ/: readme.txt
src/Applications/Loop_Memb_Particle/N5_changing_lambda/: N5_k10_lambda16  N5_k10_lambda2
src/Applications/Loop_Memb_Particle/N6_changing_lambda/: N6_k10_lambda1  N6_k10_lambda32  N6_k10_lambda4  N6_k10_lambda64
src/Applications/Loop_Memb_Particle/coulombic potential/: Electro_N5_k1_lambda10  readme.txt
src/Applications/Loop_Memb_Particle/harmonic/: N30_kp1_lambda8_volconst_1
src/Applications/Loop_Memb_Particle/harmonic/finer/: Harm_N40_kp1_lambda5_volp9
(+114 files in other folders)
